Some other changes on style...

--- a/generator/asset/element/renderer/glc_render_Twitter_for_push_different_title.js/less/glc_render_Twitter_for_push_different_title.less
+++ b/generator/asset/element/renderer/glc_render_Twitter_for_push_different_title.js/less/glc_render_Twitter_for_push_different_title.less
@@ -1,3 +1,6 @@
+@import "functions.less";
+@import "variables.less";
+
 .twitter_div_push {
 	margin-bottom:0px;
 	border:1px solid rgba(0, 0, 0, 0.75);
