--- a/generator/asset/element/renderer/glc_render_ICalReader_for_push_edt.js/less/glc_render_ICalReader_for_push_edt.less
+++ b/generator/asset/element/renderer/glc_render_ICalReader_for_push_edt.js/less/glc_render_ICalReader_for_push_edt.less
@@ -1,3 +1,6 @@
+@import "functions.less";
+@import "variables.less";
+
 .calendar_div_push {
 	margin-bottom:0px;
 	border:1px solid rgba(0, 0, 0, 0.75);
