Some changes to fix issues in IRSAM

--- a/generator/asset/element/zone/mainZone_irsam/style.less
+++ b/generator/asset/element/zone/mainZone_irsam/style.less
@@ -27,6 +27,7 @@
     width:              100%;
     text-align:         center;
     border-bottom:      14px red solid;
+    display: 			block;
 }
 #${zoneName} #${zoneName}_content {
     position:           absolute;
