Change some style and methods in client controler

--- a/generator/asset/element/zone/mainZone_irsam/style.less
+++ b/generator/asset/element/zone/mainZone_irsam/style.less
@@ -6,6 +6,7 @@
     left:               0px;
     width:              100%;
     background-color:   transparent;
+    color: white;
 }
 #${zoneName} #${zoneName}_logo {
     position :          absolute;
@@ -18,7 +19,8 @@
     }
 }
 #${zoneName} #${zoneName}_title {
-    font-size:          17vh;
+    font-size:          16vh;
+    padding-left: 80px;
     top:                0px;
     left:               0px;
     height:             20%;
@@ -27,6 +29,7 @@
     text-align:         center;
     border-bottom:      14px red solid;
     display: 			block;
+    margin-bottom: 20px;
 }
 #${zoneName} #${zoneName}_content {
     width:              90%;
@@ -34,4 +37,6 @@
     bottom:             0px;
     left:               5%;
     font-size:          13vh;
+    text-align: center;
+    display: block;
 }
