--- a/generator/asset/element/renderer/irsam_render_album.js/less/irsam_render_album.less
+++ b/generator/asset/element/renderer/irsam_render_album.js/less/irsam_render_album.less
@@ -2,8 +2,8 @@
 .image_album {
     margin:             0px auto;
     text-align:         center;
-    height:             95%;
     img {
         height:         100%;
+        width: 95%;
     }
 }
