--- a/generator/asset/element/renderer/irsam_render_album.js/less/irsam_render_album.less
+++ b/generator/asset/element/renderer/irsam_render_album.js/less/irsam_render_album.less
@@ -1,6 +1,9 @@
 
 .image_album {
-    margin:             0px auto;
+    margin-top:             auto;
+    margin-bottom: auto;
+    margin-right: 15px;
+    margin-left: 15px;
     text-align:         center;
     img {
         height:         100%;
