--- a/generator/asset/element/zone/mainZone_irsam/style.less
+++ b/generator/asset/element/zone/mainZone_irsam/style.less
@@ -15,7 +15,8 @@
     height:             16%;
     background :        transparent no-repeat;
     img {
-    	height:         100%;
+    	height: 115px;
+		width: 132px;
     }
 }
 #${zoneName} #${zoneName}_title {
