Fix some less errors in behaviours and renderers

--- a/generator/asset/element/behaviour/ComportementScrollingEachLogoLeft.js/less/ComportementScrollingEachLogoLeft.less
+++ b/generator/asset/element/behaviour/ComportementScrollingEachLogoLeft.js/less/ComportementScrollingEachLogoLeft.less
@@ -1,14 +1,8 @@
 @import "functions.less";
 @import "variables.less";
 
-.scrollContentLogoLeftBefore{
-    float:left;
-    height:90%;
-    .leftArrow;
-}
-
-
-.scrollContentLogoLeft{
+.scrollContentEachLogoLeft{
+    margin-left:10px;
     margin-right:10px;
     height:90%;
     color:@white;
@@ -16,9 +10,10 @@
     span{
     	line-height:135%;
     }
-    .blackAlpha;
-    
+    position:relative;
 }
+
+
 .scrollContent{
   font-size:120%;
   white-space: nowrap;
