--- a/generator/asset/element/behaviour/ComportementScrollingLeft.js/less/ComportementScrollingLeft.less
+++ b/generator/asset/element/behaviour/ComportementScrollingLeft.js/less/ComportementScrollingLeft.less
@@ -1,14 +1,8 @@
 @import "functions.less";
 @import "variables.less";
 
-.scrollContentLogoLeftBefore{
-    float:left;
-    height:90%;
-    .leftArrow;
-}
-
-
-.scrollContentLogoLeft{
+.scrollContentLeft{
+    margin-left:10px;
     margin-right:10px;
     height:90%;
     color:@white;
@@ -17,8 +11,8 @@
     	line-height:135%;
     }
     .blackAlpha;
-    
 }
+
 .scrollContent{
   font-size:120%;
   white-space: nowrap;
