--- a/generator/asset/element/zone/bottomZone_universite/style.less
+++ b/generator/asset/element/zone/bottomZone_universite/style.less
@@ -37,3 +37,10 @@
 #${zoneName} .title{
 	display:none;
 }
+
+#${zoneName} .scrollContentLeft {
+    margin: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
