--- a/generator/asset/element/zone/mainZone_universite/style.less
+++ b/generator/asset/element/zone/mainZone_universite/style.less
@@ -6,7 +6,7 @@
     font-size: 100%;
     float: left;
     margin-top: 50px;
-
+    .zone1Background;
     height: 68%;
     width: 98%;
     padding-left: 2%;
@@ -42,10 +42,4 @@
     display:block;
     margin-right:90px;
     text-shadow:2px 2px 5px #aaa;
-}
-
-#${zoneName} .scrollContentLeft {
-    margin: 0px;
-    padding-left: 10px;
-    padding-right: 10px;
 }
