--- a/generator/asset/element/zone/bottomZone_universite/style.less
+++ b/generator/asset/element/zone/bottomZone_universite/style.less
@@ -2,40 +2,41 @@
 @import "../less/variables.less";
 
 #${zoneName} {
-    height:10%;
-    margin-top:1%;
-    overflow:hidden;
-    -webkit-transition: all .5s ease-in;
-    -moz-transition: all .5s ease-in;
-    transition: all .5s ease-in;
-    position:absolute;
+    height: 10%;
+    margin-top: 1%;
+    width: 100%;
+    overflow: hidden;
+    -webkit-transition: all 0.5s ease-in;
+    -moz-transition: all 0.5s ease-in;
+    transition: all 0.5s ease-in;
+    position: absolute;
     bottom: 0px;
     left: 0px;
 }
 
 #${zoneName} .noinfo{
-	display:table;
-	.lightBackground;
-	margin-left:1%;
-	margin-right:1%;
-	width:98%;
-	font-size:95%;
-	font-weight:400;
-	height:90%;
+    display:table;
+    .lightBackground;
+    margin-left:1%;
+    margin-right:1%;
+    width:98%;
+    font-size:95%;
+    font-weight:400;
+    height:90%;
 
-	text-align:center;
-	div{
-		display:table-cell;
-		vertical-align:middle;
-	}
+    text-align:center;
+    div{
+        display:table-cell;
+        vertical-align:middle;
+    }
 }
 
 #${zoneName} span {
-  position: relative;
+    position: relative;
 }
 
 #${zoneName} .title{
-	display:none;
+    display:none;
 }
 
 #${zoneName} .scrollContentLeft {
