Modification online vers le repository. Besoin de regénérer pour voir si tout est okay.

--- a/generator/asset/element/layout/universite/index.html
+++ b/generator/asset/element/layout/universite/index.html
@@ -9,14 +9,9 @@
         <script type="text/javascript" src="js/date.js"></script>
         <script type="text/javascript" src="js/controler.js"></script>
 
-        <link href="img/climacons-font/webfont/climacons-font.css" rel="stylesheet" type="text/css" />
-        <link href="less/style.less" rel="stylesheet/less" id="stylePage"/>
-
         $zoneScripts
 
-        <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600' rel='stylesheet' type='text/css'>
-
-
+        <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600' rel='stylesheet' type='text/css'/>
 
     </head>
 
@@ -35,7 +30,7 @@
                 <img id="loading_img" src="./img/yc_loading.gif" />
             </div>
         </div>
-        <span class="design_signature"><a href="http://c.line-design.fr">c.line-design.fr</a></span>
+
     </body>
 </html>
 
