--- a/generator/asset/element/zone/bottomZone_universite/style.less
+++ b/generator/asset/element/zone/bottomZone_universite/style.less
@@ -13,35 +13,33 @@
     bottom: 0px;
     left: 0px;
 }
-
-#${zoneName} .noinfo{
-    display:table;
-    .lightBackground;
-    margin-left:1%;
-    margin-right:1%;
-    width:98%;
-    font-size:95%;
-    font-weight:400;
-    height:90%;
-
-    text-align:center;
-    div{
-        display:table-cell;
-        vertical-align:middle;
-    }
+#${zoneName} .noinfo {
+    display: table;
+    background-color: rgba(255, 255, 255, 0.25);
+    color: #222222;
+    margin-left: 1%;
+    margin-right: 1%;
+    width: 98%;
+    font-size: 95%;
+    font-weight: 400;
+    height: 90%;
+    text-align: center;
 }
-
+#${zoneName} .noinfo div {
+    display: table-cell;
+    vertical-align: middle;
+}
 #${zoneName} span {
     position: relative;
 }
-
-#${zoneName} .title{
-    display:none;
+#${zoneName} .title {
+    display: none;
 }
-
 #${zoneName} .scrollContentLeft {
     margin: 0px;
     padding-left: 10px;
     padding-right: 10px;
 }
-
+#${zoneName} .scrollContentLeft img {
+    max-height: 100%;
+}
