--- a/generator/asset/element/renderer/universite_render_video.js/less/universite_render_video.less
+++ b/generator/asset/element/renderer/universite_render_video.js/less/universite_render_video.less
@@ -5,10 +5,10 @@
     height: 100%;
     text-align: center;
 }
-#video iframe, #video object {
+#video iframe,
+#video object {
     position: absolute;
     width: 100%;
     height: 85%;
     text-align: center;
 }
-
