--- a/generator/asset/element/zone/mainZone_universite/style.less
+++ b/generator/asset/element/zone/mainZone_universite/style.less
@@ -6,40 +6,45 @@
     font-size: 100%;
     float: left;
     margin-top: 50px;
-    .zone1Background;
-    height: 68%;
-    width: 98%;
-    padding-left: 2%;
+    height: 60%;
+    width: 96%;
+    padding: 2%;
     background-color: rgba(255, 255, 255, 0.7);
     -moz-box-shadow: 1px 1px 1px #ccc;
     -webkit-box-shadow: 1px 1px 1px #ccc;
     box-shadow: 1px 1px 1px #ccc;
     overflow: hidden;
 }
-
-#${zoneName} .logo{
-    width:85px;
-    height:85px;
-    display:block;
+#${zoneName} .logo {
+    width: 85px;
+    height: 85px;
+    display: block;
     position: absolute;
     top: 0px;
     right: 0px;
-    text-align:right;
-    img {
-        margin-right: 10px;
-        margin-top:10px;
-        background : transparent no-repeat;
-    }
+    text-align: right;
 }
-
+#${zoneName} .logo img {
+    margin-right: 10px;
+    margin-top: 10px;
+    background: transparent no-repeat;
+}
 #${zoneName} .title {
-    color: @grayDark;
-    font-weight:500;
-    font-size:135%;
-    line-height:135%;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    display:block;
-    margin-right:90px;
-    text-shadow:2px 2px 5px #aaa;
+    color: #333333;
+    font-weight: 500;
+    font-size: 135%;
+    line-height: 135%;
+    margin: 10px;
+    margin-bottom: 20px;
+    display: block;
+    margin-right: 90px;
+    text-shadow: 2px 2px 5px #aaa;
+}
+#${zoneName} #trafic {
+    width: 100%;
+    height: 100%;
+}
+#${zoneName} #trafic iframe {
+    width: 100%;
+    height: 80%;
 }
