--- a/generator/asset/template/provider-pom.xml.vm
+++ b/generator/asset/template/provider-pom.xml.vm
@@ -29,7 +29,7 @@
     <dependency>
     	<groupId>fr.yourcast</groupId>
     	<artifactId>provider-core</artifactId>
-    	<version>$parentVersion</version>
+    	<version>1.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
   		<groupId>com.sun.jersey</groupId>
