Modification dans le css des scrollings.

--- a/generator/asset/element/behaviour/ComportementScrollingEachLogoLeft.js/less/ComportementScrollingEachLogoLeft.less
+++ b/generator/asset/element/behaviour/ComportementScrollingEachLogoLeft.js/less/ComportementScrollingEachLogoLeft.less
@@ -2,22 +2,21 @@
 @import "variables.less";
 
 .scrollContentEachLogoLeft{
-    margin-left:10px;
-    margin-right:10px;
     height:90%;
     color:@white;
     overflow:hidden;
     span{
-    	line-height:135%;
+        line-height:135%;
     }
     position:relative;
+    background-color: rgba(22, 22, 22, 0.8);
 }
 
 
 .scrollContent{
-  font-size:120%;
-  white-space: nowrap;
-  display: inline-block;
-  line-height:135%;
-  height:100%;
+    font-size:120%;
+    white-space: nowrap;
+    display: inline-block;
+    line-height:135%;
+    height:100%;
 }
