--- a/generator/asset/element/zone/mainZone_universite/style.less
+++ b/generator/asset/element/zone/mainZone_universite/style.less
@@ -31,7 +31,8 @@
 }
 #${zoneName} .title {
     color: #333333;
-    font-weight: 500;
+    font-family: "Roboto";
+    font-weight: 100;
     font-size: 135%;
     line-height: 135%;
     margin: 10px;
@@ -39,6 +40,8 @@
     display: block;
     margin-right: 90px;
     text-shadow: 2px 2px 5px #aaa;
+    color: #006fa4;
+    font-size: 36px;
 }
 #${zoneName} #trafic {
     width: 100%;
@@ -47,4 +50,17 @@
 #${zoneName} #trafic iframe {
     width: 100%;
     height: 80%;
+}
+
+#${zoneName}_new_appear {
+    height: 80%;
+}
+
+#${zoneName} .rss_body .rss_Content {
+    width: 70%;
+}
+
+#${zoneName} .rss_body .rss_Image {
+    float: right;
+    width: 25%;
 }
