Dernière modification au niveau du css.

--- a/generator/asset/element/layout/universite/index.html
+++ b/generator/asset/element/layout/universite/index.html
@@ -12,6 +12,7 @@
         $zoneScripts
 
         <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600' rel='stylesheet' type='text/css'/>
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
 
     </head>
 
