--- a/generator/asset/element/renderer/irsam_render_album.js/less/irsam_render_album.less
+++ b/generator/asset/element/renderer/irsam_render_album.js/less/irsam_render_album.less
@@ -1,12 +1,12 @@
-
 .image_album {
-    margin-top:             auto;
+    margin-top: auto;
     margin-bottom: auto;
     margin-right: 15px;
     margin-left: 15px;
-    text-align:         center;
-    img {
-        height:         100%;
-        width: 95%;
-    }
+    text-align: center;
+    height: 100%;
+}
+
+.image_album img {
+    height: 100%;
 }
