--- a/generator/asset/element/zone/mainZone_irsam/style.less
+++ b/generator/asset/element/zone/mainZone_irsam/style.less
@@ -1,43 +1,44 @@
 
 #${zoneName} {
-    font-size:          10vh;
-    position:           absolute;
-    top:                0px;
-    left:               0px;
-    width:              100%;
-    background-color:   transparent;
+    font-size: 10vh;
+    position: absolute;
+    top: 0px;
+    height: 100%;
+    left: 0px;
+    width: 100%;
+    background-color: transparent;
     color: white;
 }
 #${zoneName} #${zoneName}_logo {
-    position :          absolute;
-    left:               1%;
-    top:                2%;
-    height:             16%;
-    background :        transparent no-repeat;
+    position: absolute;
+    left: 1%;
+    top: 2%;
+    height: 16%;
+    background: transparent no-repeat;
     img {
-    	height: 115px;
-		width: 132px;
+        height: 115px;
+        width: 132px;
     }
 }
 #${zoneName} #${zoneName}_title {
-    font-size:          16vh;
-    padding-left: 80px;
-    top:                0px;
-    left:               0px;
-    height:             20%;
-    font-weight:        bold;
-    width:              100%;
-    text-align:         center;
-    border-bottom:      14px red solid;
-    display: 			block;
+    font-size: 150%;
+    padding-left: 40px;
+    height: 20%;
+    font-weight: bold;
+    width: 100%;
+    text-align: center;
+    border-bottom: 14px red solid;
+    display: block;
     margin-bottom: 20px;
+    line-height: 150%;
 }
 #${zoneName} #${zoneName}_content {
-    width:              100%;
-    height:             75%;
-    bottom:             0px;
-    left:               5%;
-    font-size:          13vh;
+    position: absolute;
+    width: 100%;
+    top: 25%;
+    bottom: 0px;
+    font-size: 130%;
+    line-height: 130%;
     text-align: center;
     display: block;
 }
