--- a/generator/asset/element/zone/mainZone_universite/style.less
+++ b/generator/asset/element/zone/mainZone_universite/style.less
@@ -9,7 +9,7 @@
     height: 60%;
     width: 96%;
     padding: 2%;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.87);
     -moz-box-shadow: 1px 1px 1px #ccc;
     -webkit-box-shadow: 1px 1px 1px #ccc;
     box-shadow: 1px 1px 1px #ccc;
@@ -32,16 +32,14 @@
 #${zoneName} .title {
     color: #333333;
     font-family: "Roboto";
-    font-weight: 100;
-    font-size: 135%;
-    line-height: 135%;
+    font-weight: 400;
+    font-size: 140%;
+    line-height: 140%;
     margin: 10px;
     margin-bottom: 20px;
     display: block;
     margin-right: 90px;
-    text-shadow: 2px 2px 5px #aaa;
     color: #006fa4;
-    font-size: 36px;
 }
 #${zoneName} #trafic {
     width: 100%;
@@ -51,16 +49,16 @@
     width: 100%;
     height: 80%;
 }
-
-#${zoneName}_new_appear {
+#${zoneName} {
     height: 80%;
 }
-
 #${zoneName} .rss_body .rss_Content {
     width: 70%;
 }
-
 #${zoneName} .rss_body .rss_Image {
     float: right;
     width: 25%;
+}
+#${zoneName} .rss_body .rss_Image img {
+    width: 100%;
 }
