Problème css sur les zones GLC.

--- a/generator/asset/element/zone/mainZone_glc/style.less
+++ b/generator/asset/element/zone/mainZone_glc/style.less
@@ -2,9 +2,9 @@
 @import "../less/variables.less";
 
 #${zoneName} {    
-    position:relative;
+    position:absolute;
     font-size:100%;
-    /*margin-top: 1%;    */
+    top: 13%; left: 0px;
     height : 76%;
     width : 68%;
     padding-left: 2%;
@@ -16,35 +16,35 @@
 }
 
 #${zoneName} .logo{
-	width:85px;
-	height:85px;
-	display:block;
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	text-align:right;
-	img {
-	    margin-right: 10px;
-	    margin-top:10px;
-	    background : transparent no-repeat;
-	}
+    width:85px;
+    height:85px;
+    display:block;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    text-align:right;
+    img {
+        margin-right: 10px;
+        margin-top:10px;
+        background : transparent no-repeat;
+    }
 }
 
 #${zoneName} .title {
-  	color: @grayDark;
-  	font-weight:500;
-	font-size:135%;
-	line-height:135%;
-	margin-top: 40px;
-	margin-bottom: 40px;
-	display:block;
-	margin-right:90px;
-	text-shadow:2px 2px 5px #aaa;
+    color: @grayDark;
+    font-weight:500;
+    font-size:135%;
+    line-height:135%;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    display:block;
+    margin-right:90px;
+    text-shadow:2px 2px 5px #aaa;
 }
 
 #${zoneName}_content {
-	position: absolute;
-	top: 25%;
-	height: 75%;
-	width: 93%;
+    position: absolute;
+    top: 25%;
+    height: 75%;
+    width: 93%;
 }
