--- a/generator/asset/element/zone/headerZone_glc/style.less
+++ b/generator/asset/element/zone/headerZone_glc/style.less
@@ -1,13 +1,12 @@
 @import "../less/functions.less";
 @import "../less/variables.less";
 
-#${zoneName} {    
-    width : 81%;
-    float:left;
+#${zoneName} {
+    position: absolute;
+    top: 0px; left: 0px;
+    width : 100%;
     height: 12%;
     background:none;
     clear:right;
-    margin-bottom:0%;
     color:#ffffff;
-    position:relative;
 }
