--- a/generator/asset/element/renderer/glc_render_RSS_for_main_generique.js/less/glc_render_RSS_for_main_generique.less
+++ b/generator/asset/element/renderer/glc_render_RSS_for_main_generique.js/less/glc_render_RSS_for_main_generique.less
@@ -26,7 +26,19 @@
         width:90%;
         text-align:right;
         z-index:101;
-    }		
+    }
+    .rss_Image {
+        float: right;
+        max-width: 25%;
+        max-height: 25%;
+        margin: 0px;
+        margin-left: 20px;
+        margin-bottom: 20px;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
 
 .smooth{
