--- a/generator/asset/element/zone/mainZone_universite/style.less
+++ b/generator/asset/element/zone/mainZone_universite/style.less
@@ -1,12 +1,49 @@
 @import "../less/functions.less";
 @import "../less/variables.less";
 
+/* Responsive */
+
+@media (max-width: 600px) {
+    #${zoneName} {
+        height: 65%;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 800px) {
+    #${zoneName} {
+        height: 62%;
+    }
+}
+
+@media (min-width: 800px) and (max-width: 1200px) {
+    #${zoneName} {
+        height: 60%;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1600px) {
+    #${zoneName} {
+        height: 58%;
+    }
+}
+
+@media (min-width: 1600px) and (max-width: 2000px) {
+    #${zoneName} {
+        height: 55%;
+    }
+}
+
+@media (min-width: 2000px) {
+    #${zoneName} {
+        height: 52%;
+    }
+}
+
 #${zoneName} {
     position: relative;
     font-size: 100%;
     float: left;
     margin-top: 50px;
-    height: 60%;
     width: 96%;
     padding: 2%;
     background-color: rgba(255, 255, 255, 0.87);
@@ -30,15 +67,12 @@
     background: transparent no-repeat;
 }
 #${zoneName} .title {
-    color: #333333;
     font-family: "Roboto";
     font-weight: 400;
     font-size: 140%;
     line-height: 140%;
-    margin: 10px;
     margin-bottom: 20px;
     display: block;
-    margin-right: 90px;
     color: #006fa4;
 }
 #${zoneName} #trafic {
@@ -48,17 +82,4 @@
 #${zoneName} #trafic iframe {
     width: 100%;
     height: 80%;
-}
-#${zoneName} {
-    height: 80%;
-}
-#${zoneName} .rss_body .rss_Content {
-    width: 70%;
-}
-#${zoneName} .rss_body .rss_Image {
-    float: right;
-    width: 25%;
-}
-#${zoneName} .rss_body .rss_Image img {
-    width: 100%;
 }
