Modification graphique GLC.

--- a/generator/asset/element/zone/bottomZone_glc/style.less
+++ b/generator/asset/element/zone/bottomZone_glc/style.less
@@ -1,39 +1,35 @@
-@import "../less/functions.less";
-@import "../less/variables.less";
 
 #${zoneName} {
-    height:10%;
-    margin-top:1%;
-    overflow:hidden;
-    -webkit-transition: all .5s ease-in;
-    -moz-transition: all .5s ease-in;
-    transition: all .5s ease-in;
-    position:absolute;
+    position: absolute;
+    overflow: hidden;
+    top: 84%;
     bottom: 0px;
+    right: 0px;
     left: 0px;
+    padding: 10px 0px;
 }
 
 #${zoneName} .noinfo{
-	display:table;
-	.lightBackground;
-	margin-left:1%;
-	margin-right:1%;
-	width:98%;
-	font-size:95%;
-	font-weight:400;
-	height:90%;
+    display:table;
+    .lightBackground;
+    margin-left:1%;
+    margin-right:1%;
+    width:98%;
+    font-size:95%;
+    font-weight:400;
+    height:90%;
 
-	text-align:center;
-	div{
-		display:table-cell;
-		vertical-align:middle;
-	}
+    text-align:center;
+    div{
+        display:table-cell;
+        vertical-align:middle;
+    }
 }
 
 #${zoneName} span {
-  position: relative;
+    position: relative;
 }
 
 #${zoneName} .title{
-	display:none;
+    display:none;
 }
