--- a/generator/asset/element/zone/headerZone_glc/style.less
+++ b/generator/asset/element/zone/headerZone_glc/style.less
@@ -1,12 +1,23 @@
-@import "../less/functions.less";
-@import "../less/variables.less";
 
 #${zoneName} {
     position: absolute;
-    top: 0px; left: 0px;
-    width : 100%;
-    height: 12%;
-    background:none;
-    clear:right;
-    color:#ffffff;
-}
+    overflow: hidden;
+    top: 0px;
+    bottom: 84%;
+    right: 40%;
+    left: 25%;
+    padding: 10px 0px; }
+@media (max-width: 1200px) {
+    #${zoneName} {
+        position: relative;
+        width: 100%;
+        height: auto;
+        left: 0%;
+        right: 0%;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin: 15px auto; } }
+#${zoneName} #${zoneName}_centrale {
+    background: #6666ff;
+    width: 100%;
+    height: 100%; }
