--- a/generator/asset/element/zone/rightZone_glc/style.less
+++ b/generator/asset/element/zone/rightZone_glc/style.less
@@ -1,41 +1,26 @@
-@import "../less/functions.less";
-@import "../less/variables.less";
 
 #${zoneName} {
-    float: right;
-    font-size: 100%;
-    height: 76%;
-    width: 28%;
-    margin-top: 0%;
-    top: 13%;
+    position: absolute;
     overflow: hidden;
-    position: relative;
-}
-
-#${zoneName} .title{
-    display:none;
-}
-
-#${zoneName} .noinfo{
-    display:table;
-    .lightBackground;
-    width:91%;
-    font-size:95%;
-    font-weight:400;
-    height:100%;
-    padding:2%;
-    text-align:center;
-    div{
-        display:table-cell;
-        vertical-align:middle;
-    }
-}
-
-#${zoneName} #${zoneName}_logo {
-    width:80px;
-    overflow: hidden;
-    z-index: 1;
-    margin-left:10px;
-    display:none;
-    padding:0;
-}
+    top: 16%;
+    bottom: 16%;
+    right: 0px;
+    left: 70%;
+    padding: 0px 0px 0px 10px; }
+@media (max-width: 1200px) {
+    ${zoneName} {
+        position: relative;
+        width: 100%;
+        height: 400px;
+        left: 0%;
+        right: 0%;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin: 15px auto; } }
+#${zoneName} #${zoneName}_centrale {
+    background: transparent;
+    width: 100%;
+    height: 100%; }
+@media (max-width: 1200px) {
+    #ZoneDeDroite {
+        padding: 0px; } }
