Modification génération GLC.

--- a/generator/asset/element/renderer/glc_render_RSS_for_push_generique.js/less/glc_render_RSS_for_push_generique.less
+++ b/generator/asset/element/renderer/glc_render_RSS_for_push_generique.js/less/glc_render_RSS_for_push_generique.less
@@ -2,36 +2,38 @@
 @import "variables.less";
 
 .rss_div_push {
-	margin-bottom:0px;
-	border:1px solid rgba(0, 0, 0, 0.75);
-	border-bottom:5px solid @black;
-	.blackAlpha;
-	width:95%;
-	color:@white;
-	font-size:50%;
-	
-/* RSS */
-	.rss_body{
-		margin:5px 10px 10px 10px;
-		.rss_Title{
-			font-weight:600;
-			padding-bottom:0.5em;
-			padding-top:0.5em;
-			font-size:120%;
-		}
-		.rss_Content{
-			font-weight:400;
-		}		
-	}	
-	.rss_source{
-		background-color:@black;
-		line-height:160%;
-		font-size:150%;
-		text-align:center;
-		padding-top:5px;
-		img{
-			margin:0px 5px 5px 0;
-			width:6%;
-		}
-	}
+    margin-bottom: 0px;
+    border: 1px solid rgba(0, 0, 0, 0.75);
+    border-bottom: 5px solid rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 98%;
+    color: #ffffff;
+    font-size: 70%;
+
+    /* RSS */
+    .rss_body{
+        margin: 5px 10px 10px 10px;
+        color: white;
+        .rss_Title{
+            font-weight: 400;
+            padding-bottom: 0.5em;
+            padding-top: 0.5em;
+            font-size: 120%;
+            color: white;
+        }
+        .rss_Content{
+            font-weight:400;
+        }		
+    }	
+    .rss_source{
+        background-color: black;
+        line-height: 160%;
+        font-size: 150%;
+        text-align: center;
+        padding-top: 5px;
+        img{
+            margin: 0px 5px 5px 0;
+            width: 6%;
+        }
+    }
 }
