--- a/generator/asset/element/zone/mainZone_glc/style.less
+++ b/generator/asset/element/zone/mainZone_glc/style.less
@@ -40,11 +40,12 @@
     left: 0px;
     right: 0px;
 }
-#${zoneName} #ZoneCentrale_content {
+#${zoneName} #${zoneName}_content {
     width: 100%;
     padding: 20px;
 }
-#${zoneName} #ZoneCentrale_logo {
+#${zoneName} #${zoneName}_logo {
     margin: -15px 20px;
     margin-right: -15px;
+    float: right;
 }
