--- a/generator/asset/element/layout/glc/less/style.less
+++ b/generator/asset/element/layout/glc/less/style.less
@@ -8,7 +8,7 @@ body {
     -moz-background-size:cover; /* Old Firefox */
     background-size:cover;
     background-repeat:repeat;
-
+    
     overflow: hidden;
     background: url("../img/yourcast_background.png");
     font-family: 'Roboto', "Helvetica Neue", Helvetica, Tahoma, Arial, sans-serif;
@@ -43,7 +43,7 @@ body {
     margin:0;
 }
 
-.design_signature a{
+.design_signature a {
     position:absolute;
     right:5px;
     bottom:5px;
@@ -61,14 +61,13 @@ body {
     right: 75%;
     left: 0px;
     padding: 10px 0px;
-    width: 100%;
-    height: 100%;
     text-align: left;
     color: #ffffff;
     text-shadow: 2px 3px 6px #000;
     padding-left: 10px;
     font-size: 200%;
-    font-style: normal; }
+    font-style: normal;
+}
 @media (max-width: 1200px) {
     #date_time {
         position: relative;
@@ -93,10 +92,12 @@ body {
     left: 0;
     z-index: 2;
     text-align: center;
-    line-height: 100%; }
+    line-height: 100%;
+}
 #logo_loading div {
     display: table-cell;
-    vertical-align: middle; }
+    vertical-align: middle;
+}
 #logo_loading img {
     max-width: 80%;
     max-height: 80%;
@@ -108,4 +109,5 @@ body {
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px; }
+    border-bottom-right-radius: 6px;
+}
