--- a/generator/asset/element/renderer/glc_render_RSS_for_main_generique.js/less/glc_render_RSS_for_main_generique.less
+++ b/generator/asset/element/renderer/glc_render_RSS_for_main_generique.js/less/glc_render_RSS_for_main_generique.less
@@ -17,26 +17,20 @@
         line-height:140%;
     }
     .rss_Source {
-        font-size: 100%;
-        font-weight:400;
-        color:@gray;
-        position : absolute;
-        bottom : 0.5em;
-        left : 0%;
-        width:90%;
-        text-align:right;
-        z-index:101;
+        font-size: 50%;
+        line-height: 105%;
+        color: #666;
+        text-shadow: none;
+        margin-top: 10px;
     }
     .rss_Image {
-        float: right;
-        max-width: 25%;
-        max-height: 25%;
-        margin: 0px;
-        margin-left: 20px;
-        margin-bottom: 20px;
         img {
-            width: 100%;
-            height: 100%;
+            float: right;
+            margin: 10px;
+            margin-top: 0px;
+            margin-right: 0px;
+            max-width: 30%;
+            max-height: 50%;
         }
     }
 }
