--- a/generator/asset/element/zone/headerZone_glc/style.less
+++ b/generator/asset/element/zone/headerZone_glc/style.less
@@ -6,7 +6,8 @@
     bottom: 84%;
     right: 40%;
     left: 25%;
-    padding: 10px 0px; }
+    padding: 10px 0px;
+}
 @media (max-width: 1200px) {
     #${zoneName} {
         position: relative;
@@ -16,8 +17,11 @@
         right: 0%;
         padding-top: 10px;
         padding-bottom: 10px;
-        margin: 15px auto; } }
+        margin: 15px auto;
+    }
+}
 #${zoneName} #${zoneName}_centrale {
     background: #6666ff;
     width: 100%;
-    height: 100%; }
+    height: 100%;
+}
