--- a/generator/asset/element/renderer/glc_render_Weather_forecast_2days_for_header.js/less/glc_render_Weather_forecast_2days_for_header.less
+++ b/generator/asset/element/renderer/glc_render_Weather_forecast_2days_for_header.js/less/glc_render_Weather_forecast_2days_for_header.less
@@ -1,42 +1,55 @@
 @import "functions.less";
 @import "variables.less";
 
-#Weather_current_header{
-	line-height:350%;
-	height:100%;
-	font-size:100%;
-	position:relative;
-	.climacon{
-		color:@white;
-		float:left;
-		display:inline-block;
-		margin-right:10px;
-		margin-top:10px;
-		vertical-align:middle;
+#Weather_current_header {
+    line-height: 350%;
+    height: 100%;
+    font-size: 100%;
+    position: relative;
+    color: #ffffff;
+    text-align: center;
 
-	}
-	small{
-		font-size:140%;
-	}
-	.yourcast;
-	
-	.weatherHeaderForecast{
-		display:inline-block;
-		font-size:78%;
-		color:@grayLightPlus;
-		.forecast{
-			display:inline-block;
-			margin-left:1.5em;
-			position:relative;
-			.climacon{color:@grayLightPlus;}
-			small{font-size:110%;}
-			.currentWeather_day_forecast{
-				position:absolute;
-				top:0;
-				left:0;
-				line-height:100%;
-			}
-		}
-	}
-	
+    div {
+        display: inline-block;
+    }
+
+    .climacon {
+        color: #ffffff;
+        float: left;
+        display: inline-block;
+        margin-right: 10px;
+        margin-top: 10px;
+        vertical-align: middle;
+    }
+
+    small {
+        font-size: 140%;
+    }
+
+    .weatherHeaderForecast {
+        display: inline-block;
+        font-size: 78%;
+        color: #d7d7d7;
+
+        .forecast {
+            display: inline-block;
+            margin-left: 1.5em;
+            position: relative;
+
+            .climacon {
+                color: #d7d7d7;
+            }
+
+            small {
+                font-size: 110%;
+            }
+
+            .currentWeather_day_forecast {
+                position: absolute;
+                top: 0;
+                left: 0;
+                line-height: 100%;
+            }
+        }
+    }
 }
