Modification graphisme GLC

--- a/generator/asset/element/layout/glc/index.html
+++ b/generator/asset/element/layout/glc/index.html
@@ -13,7 +13,8 @@
 
         $zoneScripts
 
-        <link href='http://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500' rel='stylesheet' type='text/css'/>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:100,300,400,500' rel='stylesheet' type='text/css'/>
 
     </head>
 
