--- a/generator/asset/element/layout/glc/less/style.less
+++ b/generator/asset/element/layout/glc/less/style.less
@@ -19,17 +19,17 @@ body {
 
 @media (max-width: 1200px) {
     body {
-        font-size: 100%; 
+        font-size: 125%; 
     }
 }
 @media (min-width: 1200px) and (max-width: 1600px) {
     body {
-        font-size: 125%; 
+        font-size: 150%; 
     } 
 }
 @media (min-width: 1600px) {
     body {
-        font-size: 150%;
+        font-size: 175%;
     }
     background-position: left top;
     font-family:@baseFontFamily;
@@ -68,6 +68,7 @@ body {
     font-size: 200%;
     font-style: normal;
 }
+
 @media (max-width: 1200px) {
     #date_time {
         position: relative;
@@ -77,10 +78,10 @@ body {
         right: 0%;
         padding-top: 10px;
         padding-bottom: 10px;
-        margin: 15px auto; } }
-@media (max-width: 1200px) {
-    #date_time {
-        text-align: center; } }
+        margin: 15px auto;
+        text-align: center;
+    }
+}
 
 #logo_loading {
     display: table;
@@ -111,3 +112,29 @@ body {
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
 }
+
+#ZoneHautMilieu {
+    position: absolute;
+    overflow: hidden;
+    top: 0px;
+    bottom: 84%;
+    right: 20%;
+    left: 60%;
+    padding: 10px 0px; }
+@media (max-width: 1200px) {
+    #ZoneHautMilieu {
+        position: relative;
+        width: 100%;
+        height: normale;
+        left: 0%;
+        right: 0%;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin: 15px auto; } }
+#ZoneHautMilieu #zoneHautMilieu_centrale {
+    text-align: center;
+    width: 100%;
+    height: 100%; }
+#ZoneHautMilieu #zoneHautMilieu_centrale img {
+    margin: auto; }
+
