--- a/generator/asset/element/zone/bottomZone_glc/style.less
+++ b/generator/asset/element/zone/bottomZone_glc/style.less
@@ -11,6 +11,19 @@
     padding: 10px 0px;
 }
 
+@media (max-width: 1200px) {
+    #${zoneName} {
+        position: relative;
+        width: 100%;
+        height: auto;
+        left: 0%;
+        right: 0%;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin: 15px auto;
+    }
+}
+
 #${zoneName} .noinfo{
     display:table;
     .lightBackground;
