--- a/generator/asset/element/zone/rightZone_glc/style.less
+++ b/generator/asset/element/zone/rightZone_glc/style.less
@@ -22,5 +22,5 @@
     width: 100%;
     height: 100%; }
 @media (max-width: 1200px) {
-    #ZoneDeDroite {
+    #${zoneName} {
         padding: 0px; } }
