Modification design Imredd.

--- a/generator/asset/element/layout/imredd/less/style.less
+++ b/generator/asset/element/layout/imredd/less/style.less
@@ -8,7 +8,7 @@ body {
     -moz-background-size:cover; /* Old Firefox */
     background-size:cover;
     background-repeat:repeat;
-    
+
     overflow: hidden;
     background: url("../img/yourcast_background.png");
     font-family: 'Roboto', "Helvetica Neue", Helvetica, Tahoma, Arial, sans-serif;
@@ -58,8 +58,8 @@ body {
     overflow: hidden;
     top: 0px;
     bottom: 84%;
-    right: 75%;
-    left: 0px;
+    right: 0px;
+    left: 75%;
     padding: 10px 0px;
     text-align: left;
     color: #ffffff;
@@ -118,9 +118,14 @@ body {
     overflow: hidden;
     top: 0px;
     bottom: 84%;
-    right: 20%;
-    left: 60%;
-    padding: 10px 0px; }
+    right: 70%;
+    left: 0px;
+    padding: 10px 0px;
+}
+#ZoneHautMilieu img {
+    max-height: 90%;
+    margin-right: 20px !important;
+}
 @media (max-width: 1200px) {
     #ZoneHautMilieu {
         position: relative;
