Changement dans la ligne Layout Imredd.

--- a/generator/asset/element/zone/mainZone_irsam/style.less
+++ b/generator/asset/element/zone/mainZone_irsam/style.less
@@ -15,10 +15,10 @@
     top: 2%;
     height: 16%;
     background: transparent no-repeat;
-    img {
-        height: 115px;
-        width: 132px;
-    }
+}
+#${zoneName} #${zoneName}_logo img {
+    height: 115px;
+    width: 132px;
 }
 #${zoneName} #${zoneName}_title {
     font-size: 150%;
