Ajout des images pour les layouts GLC et IMREDD. Styles pour Picasa.

--- a/generator/asset/element/layout/glc/index.html
+++ b/generator/asset/element/layout/glc/index.html
@@ -27,6 +27,7 @@
         <div id="ZoneHautMilieu">
             <div id="zoneHautMilieu_centrale">
                 <img src="img/yourcast_small_blue.png" alt="Logo Yourcast"/>
+                <img src="img/logo_universite.png" alt="Logo Université"/>
             </div>
         </div>
         
