--- a/generator/asset/element/zone/rightZone_glc/style.less
+++ b/generator/asset/element/zone/rightZone_glc/style.less
@@ -3,10 +3,11 @@
     position: absolute;
     overflow: hidden;
     top: 16%;
-    bottom: 16%;
+    bottom: 13%;
     right: 0px;
     left: 70%;
-    padding: 0px 0px 0px 10px; }
+    padding: 0px 0px 0px 10px;
+}
 @media (max-width: 1200px) {
     ${zoneName} {
         position: relative;
@@ -16,11 +17,23 @@
         right: 0%;
         padding-top: 10px;
         padding-bottom: 10px;
-        margin: 15px auto; } }
+        margin: 15px auto;
+    }
+}
 #${zoneName} #${zoneName}_centrale {
     background: transparent;
     width: 100%;
-    height: 100%; }
+    height: 100%;
+}
 @media (max-width: 1200px) {
     #${zoneName} {
-        padding: 0px; } }
+        position: relative;
+        width: 100%;
+        height: 400px;
+        left: 0%;
+        right: 0%;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin: 15px auto;
+    }
+}
