--- a/generator/asset/element/layout/glc/less/style.less
+++ b/generator/asset/element/layout/glc/less/style.less
@@ -17,30 +17,33 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-@media (max-width: 1200px) {
-    body {
-        font-size: 125%; 
-    }
-}
-@media (min-width: 1200px) and (max-width: 1600px) {
-    body {
-        font-size: 150%; 
-    } 
-}
-@media (min-width: 1600px) {
-    body {
-        font-size: 175%;
-    }
+@media (min-width: 1600px) and (min-height: 1600px) {
     background-position: left top;
-    font-family:@baseFontFamily;
-    font-size:1.8em;
-    width: 100%; 
-    height: 100%; 
-    position: absolute; 
-    top: 0; 
-    left: 0;    
+    font-family: 'Raleway', "Helvetica Neue", Helvetica, Tahoma, Arial, sans-serif;
+    font-size: 1.8em;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     overflow: hidden;
-    margin:0;
+    margin: 0;
+}
+
+@media (max-height: 800px) {
+    body {
+        font-size: 1.5em;
+    }
+}
+@media (min-height: 1000px) {
+    body {
+        font-size: 2em;
+    }
+}
+@media (min-height: 1200px) {
+    body {
+        font-size: 2.5em;
+    }
 }
 
 .design_signature a {
@@ -66,6 +69,7 @@ body {
     text-shadow: 2px 3px 6px #000;
     padding-left: 10px;
     font-size: 200%;
+    font-weight: 400;
     font-style: normal;
 }
 
