--- a/generator/asset/template/provider-pom.xml.vm
+++ b/generator/asset/template/provider-pom.xml.vm
@@ -17,6 +17,11 @@
           	<name>I3S Maven Snapshots Repository</name>
           	<url>http://nyx.unice.fr:9007/nexus/content/repositories/snapshots</url>	
 		</repository>
+		<repository>
+          	<id>releases</id>
+          	<name>I3S Maven Snapshots Repository</name>
+          	<url>http://nyx.unice.fr:9007/nexus/content/repositories/releases</url>	
+		</repository>
 	</repositories>  
   
   <dependencies>
