Try to fix an error with maven packaging

--- a/generator/asset/template/provider-pom.xml.vm
+++ b/generator/asset/template/provider-pom.xml.vm
@@ -64,4 +64,10 @@
   <build>
     <finalName>$finalName</finalName>
   </build>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>2.1.1</version>
+</plugin>
+  
 </project>
