--- a/generator/asset/template/provider-pom.xml.vm
+++ b/generator/asset/template/provider-pom.xml.vm
@@ -63,11 +63,14 @@
   </dependencies>
   <build>
     <finalName>$finalName</finalName>
-  </build>
-  <plugin>
+    <plugins>
+    <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-war-plugin</artifactId>
     <version>2.1.1</version>
 </plugin>
+    </plugins>
+  </build>
+  
   
 </project>
