--- a/generator/asset/template/personalizer-pom.xml.vm
+++ b/generator/asset/template/personalizer-pom.xml.vm
@@ -13,6 +13,11 @@
                 <name>I3S Maven Snapshots Repository</name>
                 <url>http://nyx.unice.fr:9007/nexus/content/repositories/snapshots</url>
                 </repository>
+                <repository>
+          	<id>releases</id>
+          	<name>I3S Maven Snapshots Repository</name>
+          	<url>http://nyx.unice.fr:9007/nexus/content/repositories/releases</url>	
+		</repository>
   </repositories>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -37,5 +42,12 @@
 
   <build>
     <finalName>$personalizerName</finalName>
+    <plugins>
+    <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>2.1.1</version>
+</plugin>
+    </plugins>
   </build>
 </project>
