--- a/generator/asset/element/layout/glc/less/style.less
+++ b/generator/asset/element/layout/glc/less/style.less
@@ -8,7 +8,7 @@ body {
     -moz-background-size:cover; /* Old Firefox */
     background-size:cover;
     background-repeat:repeat;
-    
+
     overflow: hidden;
     background: url("../img/yourcast_background.png");
     font-family: 'Roboto', "Helvetica Neue", Helvetica, Tahoma, Arial, sans-serif;
@@ -122,8 +122,8 @@ body {
     overflow: hidden;
     top: 0px;
     bottom: 84%;
-    right: 20%;
-    left: 60%;
+    right: 0%;
+    left: 65%;
     padding: 10px 0px; }
 @media (max-width: 1200px) {
     #ZoneHautMilieu {
@@ -140,5 +140,8 @@ body {
     width: 100%;
     height: 100%; }
 #ZoneHautMilieu #zoneHautMilieu_centrale img {
-    margin: auto; }
+    margin: auto;
+    margin-right: 20px;
+    vertical-align: middle;
+}
 
