Réglage Client Imredd

--- a/generator/asset/element/zone/headerZone_imredd/style.less
+++ b/generator/asset/element/zone/headerZone_imredd/style.less
@@ -4,8 +4,8 @@
     overflow: hidden;
     top: 0px;
     bottom: 84%;
-    right: 70%;
-    left: 0px;
+    right: 35%;
+    left: 35%;
     padding: 10px 0px;
 }
 @media (max-width: 1200px) {
