--- a/generator/asset/element/layout/imredd/less/style.less
+++ b/generator/asset/element/layout/imredd/less/style.less
@@ -17,30 +17,20 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-@media (max-width: 1200px) {
+@media (max-height: 800px) {
     body {
-        font-size: 125%; 
+        font-size: 1.5em;
     }
 }
-@media (min-width: 1200px) and (max-width: 1600px) {
+@media (min-height: 1000px) {
     body {
-        font-size: 150%; 
-    } 
-}
-@media (min-width: 1600px) {
-    body {
-        font-size: 175%;
+        font-size: 2em;
     }
-    background-position: left top;
-    font-family:@baseFontFamily;
-    font-size:1.8em;
-    width: 100%; 
-    height: 100%; 
-    position: absolute; 
-    top: 0; 
-    left: 0;    
-    overflow: hidden;
-    margin:0;
+}
+@media (min-height: 1200px) {
+    body {
+        font-size: 2.5em;
+    }
 }
 
 .design_signature a {
@@ -141,5 +131,8 @@ body {
     width: 100%;
     height: 100%; }
 #ZoneHautMilieu #zoneHautMilieu_centrale img {
-    margin: auto; }
+    margin: auto;
+    vertical-align: middle;
+    margin-right: 20px;
+}
 
